--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d dist"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@react-three/drei": "^9.106.0",
+    "fiber": "^1.0.4",
     "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
+    "three": "^0.165.0",
+    "three.js": "^0.77.1",
     "vite-plugin-pwa": "^0.20.0"
   },
   "devDependencies": {
