--- a/package.json
+++ b/package.json
@@ -14,13 +14,12 @@
   },
   "dependencies": {
     "@react-three/drei": "^9.106.0",
-    "fiber": "^1.0.4",
+    "@react-three/fiber": "^8.16.8",
     "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
     "three": "^0.165.0",
-    "three.js": "^0.77.1",
     "vite-plugin-pwa": "^0.20.0"
   },
   "devDependencies": {
