--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@react-three/drei": "^9.106.0",
+    "aos": "^2.3.4",
+    "fiber": "^1.0.4",
     "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
+    "swiper": "^11.1.4",
+    "three": "^0.165.0",
     "vite-plugin-pwa": "^0.20.0"
   },
   "devDependencies": {
