--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@react-three/drei": "^9.106.0",
     "aos": "^2.3.4",
+    "dat.gui": "^0.7.9",
     "fiber": "^1.0.4",
     "gh-pages": "^6.1.1",
     "react": "^18.2.0",
