--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "@react-three/drei": "^9.106.0",
     "aos": "^2.3.4",
+    "axios": "^1.7.2",
     "fiber": "^1.0.4",
     "gh-pages": "^6.1.1",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
