--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "@react-oauth/google": "^0.12.1",
     "@react-three/drei": "^9.106.0",
     "aos": "^2.3.4",
-    "dat.gui": "^0.7.9",
     "axios": "^1.7.2",
+    "dat.gui": "^0.7.9",
     "fiber": "^1.0.4",
     "gh-pages": "^6.1.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-js-pagination": "^3.0.3",
     "react-router-dom": "^6.23.1",
     "swiper": "^11.1.4",
     "three": "^0.165.0",
