--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gapi-script": "^1.2.0",
     "gh-pages": "^6.1.1",
     "jwt-decode": "^4.0.0",
+    "kakao-js-sdk": "^1.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-js-pagination": "^3.0.3",
