--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-js-pagination": "^3.0.3",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.23.1",
     "swiper": "^11.1.4",
     "three": "^0.165.0",
