--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
     "@react-three/drei": "^9.106.0",
+    "@vite-pwa/assets-generator": "^0.2.4",
     "aos": "^2.3.4",
     "axios": "^1.7.2",
     "dat.gui": "^0.7.9",
